<resources>

    <!-- SignUp layout Strings -->
    <string name="sign_up_sign_up">Sign Up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_birthday">Birthday</string>
    <string name="sign_up_join">Join</string>
    <string name="sign_up_have">Already have an account?</string>
    <string name="sign_up_in">Sign in</string>
    <string name="app_name">ToDoToBe</string>
    <string name="facebook_app_id">2143270396001866</string>
    <string name="fb_login_protocol_scheme">fb2142888135975334</string>


    <!-- SignIn layout Strings -->
    <string name="sign_in_name">Username</string>
    <string name="sign_in_forget">Forgot Password</string>
    <string name="sign_in_have_not">Do not have an account?</string>

    <!-- Splash layouts Strings -->
    <string name="splash_1_msg">keep your work organized and quickly check your reminders with simple calender</string>
    <string name="splash_2_msg">Manage your tasks quickly and efficiently </string>
    <string name="splash_3_msg">Do your tasks to Be .. </string>
    <string name="splash_next">Next</string>
    <string name="splash_begin">Begin</string>

    <!-- Main screen layouts Strings -->
    <string name="main_screen_good_M">Good Morning!</string>
    <string name="main_screen_good_A">Good Afternoon!</string>
    <string name="main_screen_good_E">Good Evening!</string>
    <string name="main_screen_good_N">Good Night!</string>
    <string name="main_screen_search_hint">Type event title to search</string>

    <!-- Add Remainder layouts Strings -->
    <string name="add_remainder_add_title">Add Title</string>
    <string name="add_remainder_add_description">Short description</string>
    <string name="add_remainder_add_location">Add Location</string>
    <string name="add_remainder_all_day">All day</string>
    <string name="add_remainder_from">From</string>
    <string name="add_remainder_to">To</string>
    <string name="add_remainder_notification">Notification</string>
    <string name="add_remainder_location">Location</string>
    <string name="add_remainder_people">People</string>
    <string name="add_remainder_repeat">Repeat</string>
    <string name="add_remainder_select_date">Select Date</string>
    <string name="add_remainder_select_time">Select Time</string>

    <!-- item list layouts Strings -->
    <string name="item_list_title">Birthday</string>
    <string name="item_list_with">with</string>
    <string name="item_list_people">Tom</string>
    <string name="item_list_time_from">10</string>
    <string name="item_list_time_to">8</string>
    <string name="item_list_location">Starbucks</string>
    <string name="item_list_am">am</string>
    <string name="item_list_pm">pm</string>
    <string name="item_list_dash">-</string>
    <string name="list_no_events">No events today</string>
    <string name="list_plz_add_events">Add tasks to do</string>


</resources>
