<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/event_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:maxHeight="88dp"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/list_event_image"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_calendar_no_eimage" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/list_title_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="26dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold">

            <TextView
                android:id="@+id/list_event_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/item_list_title"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/item_list_with"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/list_event_people"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/item_list_people"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="top"
            android:orientation="horizontal"
            android:paddingLeft="26dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#9E9E9E">

            <TextView
                android:id="@+id/list_event_time_from"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/item_list_time_from" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/item_list_dash" />

            <TextView
                android:id="@+id/list_event_time_to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/item_list_time_to" />

            <TextView
                android:id="@+id/list_event_time_to_am_pm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/item_list_am" />

            <TextView
                android:id="@+id/list_event_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/item_list_location" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>